fix responsiveness and div clipping

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@ body{
 .allcaps{
   text-transform: uppercase;
   font-size: 12px;
+  color: #757575;
 }
 #now-playing{
   max-width: 58px;
@@ -30,8 +31,8 @@ body{
 .grid{
   display: grid;
   grid-gap: 5px;
-  grid-template-columns: repeat(8, 12vw);
-  grid-template-rows: repeat(5,16vh);
+  grid-template-columns: repeat(7, minmax(1fr,12vw));
+  grid-template-rows: repeat(6,16vh);
   grid-auto-rows: 1fr;
 }
 .icons{
@@ -60,7 +61,6 @@ body{
   grid-column: span 3;
   grid-row-start: 2;
   grid-row: span 2;
-
 }
 .custom{
   grid-column-start: 5;
@@ -99,27 +99,36 @@ body{
   clip-path: circle(50%);
 }
 
-@media screen and (max-width: 414px){
-  .header{
-    height: 16vh
-  }
-  .grid{
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 3px;
-  }
-  .recent{
-    grid-column: 1/3;
-  }
-  .custom{
-    grid-column: 1/3;
-  }
-  .similar{
-    grid-column: 1/3;
-  }
-  .play{
-    grid-column: 1/3;
-  }
+@media screen and (max-width: 800px){
   .navigation{
     display: none;
+  }
+  img{
+    max-width: 15vw!important;
+  }
+  .header{
+    font-size: 28px;
+    grid-column: 1/9;
+    grid-row: span 1;
+  }
+  .recent{
+    grid-column: 2/8;
+    grid-row: span 2;
+  }
+  .custom{
+    grid-column: 2/8;
+    grid-row: span 2;
+  }
+  .similar{
+    grid-column: 2/8;
+    grid-row: span 2;
+  }
+  .podcast{
+    grid-column: 2/8;
+    grid-row: span 2;
+  }
+  .play{
+    grid-column: 1/9;
+    grid-row: span 1;
   }
 }
